# quant-live-readiness-kit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: GITHUB_SETTINGS.md  GITHUB_TOPICS.md  SECURITY_RECOMMENDATIONS.md  adapting_to_your_strategy.md  concepts.md  config_reference.md  extension_guide.md  installation.md  walkthrough.md
examples/: clean_window_manifest.example.json  config.example.yaml  incident_inputs.example.json  manual_overrides.example.yaml  monitoring_rules.example.yaml  promotion_gate.example.yaml  sample_aapl_daily.csv  sample_broker_fills.csv  sample_metrics.json  sample_model_fills.csv  walkthrough.md
scripts/: run_example.sh
src/qlrk/: __init__.py  alerting.py  cli.py  contamination.py  demo.py  freeze.py  io_utils.py  killswitch.py  monitoring.py  promotion.py  reconciliation.py  reporting.py
templates/: SKILL.md  incident_postmortem.md  limited_live_envelope.md  monitoring_thresholds.yaml  paper_validation_plan.md  promotion_gate_checklist.md
tests/: conftest.py  test_alerting.py  test_cli.py  test_contamination.py  test_demo.py  test_freeze.py  test_killswitch.py  test_monitoring.py  test_promotion.py  test_reconciliation.py
